  * Fixed handling the buffer_path argument. (issue #5)